@@ -12,7 +12,7 @@ item: Global
   Log Pathname=%MAINDIR%\INSTALL.LOG
   Message Font=MS Sans Serif
   Font Size=8
-  Disk Label=tcl8.3.4
+  Disk Label=tcl8.3.5
   Disk Filename=setup
   Patch Flags=0000000000000001
   Patch Threshold=85
@@ -54,7 +54,7 @@ item: Set Variable
 end
 item: Set Variable
   Variable=URL
-  Value=http://www.tcl-tk.net/
+  Value=http://www.tcl.tk/
 end
 item: Set Variable
   Variable=GROUP
